--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
 			href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
 		/>
 
-		<title>Countries App</title>
+		<title>Countries Weather App</title>
 	</head>
 	<body>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
